@@ -350,7 +350,7 @@ class RecCardDisplay (plugin_loader.Pluggable):
     # Main GUI setup
     def setup_main_window (self):
         self.window = gtk.Window();
-        self.window.set_icon_from_file(os.path.join(imagedir,'reccard.ico'))        
+        self.window.set_icon_from_file(os.path.join(imagedir,'reccard.png'))        
         self.window.connect('delete-event',self.hide)
         self.conf.append(WidgetSaver.WindowSaver(self.window,
                                                  self.prefs.get('reccard_window_%s'%self.current_rec.id,
@@ -871,7 +871,9 @@ class RecEditor (WidgetSaver.WidgetPrefs, plugin_loader.Pluggable):
 
     def setup_main_interface (self):
         self.window = gtk.Window()
-        self.window.set_icon_from_file(os.path.join(imagedir,'reccard.ico'))
+        self.window.set_icon_from_file(os.path.join(imagedir,'reccard_edit.png'))
+        title = ((self.current_rec and self.current_rec.title) or _('Recipe')) + ' (%s)'%_('Edit')
+        self.window.set_title(title)
         self.window.connect('delete-event',
                             self.close_cb)
         self.conf.append(WidgetSaver.WindowSaver(self.window,
